<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.shemchavez.ass.Fragment.ReminderInformationFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@color/md_white_1000"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                        <TextView
                        android:id="@+id/RITitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_reminder_title"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/accent" />
                    <TextView
                        android:padding="10dp"
                        android:id="@+id/RIMessage"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/accent"
                        android:background="@drawable/square"
                    android:text="@string/default_reminder_message" />
                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="right|center_horizontal">
                        <TextView
                            android:textColor="@color/accent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_date_sent"
                            android:layout_marginRight="5dp"/>
                        <TextView
                            android:id="@+id/RIDate"
                            android:textColor="@color/accent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_reminder_date"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
