<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/activity_change_default_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.shemchavez.ass.Activity.ChangePasswordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_welcome"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="25dp"
                        android:textColor="@color/colorAccent"
                        />
                    <!-- Driver image -->
                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/changePasswordCIImage"
                        android:layout_marginTop="10dp"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        app:civ_border_width="0dp" />
                    <TextView
                        android:id="@+id/changePasswordTVFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="30dp"
                        android:textColor="@color/colorAccent"
                        />
                </LinearLayout>
            </RelativeLayout>
            <!--Change default password card -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@color/md_white_1000"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_change_password"
                        android:textSize="15dp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />
                    <!-- Enter new password -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <!-- Icon -->
                        <com.mikepenz.iconics.view.IconicsImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:foregroundGravity="center_vertical"
                            app:iiv_color="@color/colorAccent"
                            app:iiv_icon="@string/gmd_lock" />
                        <!-- Text -->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp">

                            <com.shemchavez.ass.Custom.CustomEditText
                                android:id="@+id/changePasswordEdtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:hint="@string/label_new_password"
                                android:drawableRight="@drawable/eye"
                                android:drawableTint="@color/accent"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <!-- Enter new password again -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">
                        <!-- Icon -->
                        <com.mikepenz.iconics.view.IconicsImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:foregroundGravity="center_vertical"
                            app:iiv_color="@color/colorAccent"
                            app:iiv_icon="@string/gmd_lock" />
                        <!-- Text -->
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp">

                            <com.shemchavez.ass.Custom.CustomEditText
                                android:id="@+id/chnagePasswordEdtConfirmPassword"
                                android:drawableRight="@drawable/eye"
                                android:drawableTint="@color/accent"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/label_new_password_again"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <Button
                        android:id="@+id/changePasswordBtnSubmit"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/label_submit"
                        android:textColor= "@color/md_white_1000"
                        android:background="@color/colorAccent"
                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
